--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,7 +40,7 @@ body {
   .section-clip-3 {
     clip-path: polygon(0 50%, 100% 0%, 100% 50%, 0 100%);
     height: 200vh;
-    @apply bg-theme-red absolute w-full z-0;
-    bottom: calc(400vh + 15px);
+    @apply bg-theme-red absolute w-full z-0 bottom-[-100%];
+    /* bottom: calc(400vh + 15px); */
   }
 }
